--- a/hello.html
+++ b/hello.html
@@ -6,9 +6,7 @@
         </title>
     </head>
     <body>
+        <h1>Welcome to my website</h1><br>
         hello world
-        Boys
-        I dont understand
-        tests
     </body>
 </html>
