--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        <h1>Welcome to my website!!</h1><br>
+        <h1 style="color: blue">Welcome to my website!!</h1><br>
     </body>
 </html>
